# carmen-analysis

./: .dockerignore  .gitignore  1691293074.csv  1691293074_192_assignment.xlsx  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  analyze_run.py  app.py  app_reconfig.py  app_reconfig_v1.py  app_v2.py  assay_qc_score.py  binary_results.py  carmen_analysis.py  carmen_test  carmen_variant.py  flags.py  matcher.py  median_frame.py  norm.py  ntc_con_check.py  ntcnorm.py  plotting.py  pyproject.toml  qual_checks.py  reader.py  redcap_builder.py  requirements.txt  summary.py  t13_plotting.py  test_BM_1_signal_bkgdsubtracted_norm_13.csv  threshold.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yml  release.yml
carmen_analysis/: __init__.py  cli.py  errors.py  pipeline.py
carmen_analysis/io/: matcher.py  reader.py
carmen_analysis/process/: binary_results.py  median_frame.py  norm.py  ntc_con_check.py  ntcnorm.py  summary.py
carmen_analysis/qc/: assay_qc_score.py  flags.py  qual_checks.py  threshold.py
carmen_analysis/redcap/: builder.py
carmen_analysis/viz/: plotting.py  t13_plotting.py
carmen_analysis/web/: app.py
output/: test_signal.csv
output_1691470087/: Assay_Performance_QC_Tests_1691470087.txt  Quality_Control_Checks_1691470087.txt  Quality_Control_Flags_1691470087.txt
terraform/: .terraform.lock.hcl  README.md  artifact_registry.tf  cloud_run.tf  dns.tf  domain_mapping.tf  load_balancer.tf  main.tf  outputs.tf  staging.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_cli.py  test_legacy_shim.py  test_package.py  test_threshold_errors.py  test_web_smoke.py
