[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carmen-analysis"
version = "5.5.0"
description = "CARMEN analysis pipeline — Cas13-based multiplexed viral diagnostic data processing."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Sabeti Lab, Broad Institute" },
]
keywords = ["bioinformatics", "diagnostics", "cas13", "carmen"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy==2.2.2",
    "pandas==2.2.3",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "openpyxl==3.1.5",
    "tqdm==4.67.1",
    "reportlab==4.2.5",
    "xlsxwriter==3.2.1",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.39",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
carmen-analyze = "carmen_analysis.cli:main"

[project.urls]
Homepage = "https://github.com/broadinstitute/carmen-analysis"
Issues = "https://github.com/broadinstitute/carmen-analysis/issues"

[tool.setuptools.packages.find]
include = ["carmen_analysis*"]

[tool.setuptools.package-data]
"carmen_analysis.resources" = ["*.pdf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

# Legacy stage modules pre-date the package layout. They have whitespace and
# loop-binding patterns flagged by ruff that we won't churn in the same PR
# that performs the package refactor; they'll be cleaned up incrementally.
[tool.ruff.lint.per-file-ignores]
"carmen_analysis/io/*.py" = ["B007", "B023", "B905", "W291", "W292", "W293", "F841", "E712", "E741"]
"carmen_analysis/process/*.py" = ["B007", "B023", "B905", "W291", "W292", "W293", "F841", "E712", "E741"]
"carmen_analysis/qc/assay_qc_score.py" = ["B007", "B023", "B905", "W291", "W292", "W293", "F841", "E712", "E741"]
"carmen_analysis/qc/qual_checks.py" = ["B007", "B023", "B905", "W291", "W292", "W293", "F841", "E712", "E741"]
"carmen_analysis/qc/flags.py" = ["B007", "B023", "B905", "W291", "W292", "W293", "F841", "E712", "E741"]
"carmen_analysis/redcap/*.py" = ["B007", "B023", "B905", "W291", "W292", "W293", "F841", "E712", "E741"]
"carmen_analysis/viz/*.py" = ["B007", "B023", "B905", "W291", "W292", "W293", "F841", "E712", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
